fix(header + case-studies): to show tuf icon on mobile nav. increase header height in mobile - increase margin top of case-studies hero

--- a/src/css/pages/case-studies.scss
+++ b/src/css/pages/case-studies.scss
@@ -36,7 +36,7 @@
 
   &__content {
     position: relative;
-    margin-top: rem(88);
+    margin-top: rem(108);
     margin-bottom: 0;
 
     @media (min-width: rem(1024)) {
